--- a/.github/workflows/selenium.yaml
+++ b/.github/workflows/selenium.yaml
@@ -34,6 +34,9 @@ jobs:
       run: |
         docker-compose up -d
         sleep 10
+        
+    - name: Run Tests
+      run: docker-compose run assessment
 
     - name: Tear Down
       run: docker-compose down  
