Disabled the port option under network_host

--- a/.github/workflows/selenium.yaml
+++ b/.github/workflows/selenium.yaml
@@ -32,6 +32,7 @@ jobs:
 
     - name: Set up Docker Compose
       run: |
+        docker-compose pull
         docker-compose up -d
         sleep 10
         
