--- a/.github/workflows/selenium.yaml
+++ b/.github/workflows/selenium.yaml
@@ -39,5 +39,12 @@ jobs:
         docker-compose run assessment
 
     - name: Tear Down
-      run: docker-compose down  
+      run: docker-compose down
+    
+    - name: Publish test results
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+          name: robot-test-results
+          path: ./reports/*
     
