--- a/.github/workflows/selenium.yaml
+++ b/.github/workflows/selenium.yaml
@@ -45,6 +45,6 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v2
       with:
-          name: robot-test-results
+          name: test-results
           path: ./reports/*
     
